# deep-code-security

./: .gitignore  .ship-worktrees-20260315-112416-yzbuwg.tmp  CLAUDE.md  Makefile  README.md  SPIKE.md  pyproject.toml
.claude/: learnings.md
.claude/agents/: code-reviewer-specialist.md  code-reviewer.md  coder.md  qa-engineer.md  security-analyst.md  senior-architect.md
plans/: c-func-param-taint-sources.feasibility.md  c-func-param-taint-sources.md  c-func-param-taint-sources.redteam.md  c-func-param-taint-sources.review.md  c-fuzzer-plugin.code-review.md  c-fuzzer-plugin.md  c-fuzzer-plugin.qa-report.md  c-fuzzer-plugin.redteam.md  c-fuzzer-plugin.review.md  c-language-support.feasibility.md  c-language-support.md  c-language-support.redteam.md  c-language-support.review.md  conditional-assignment-sanitizer.code-review.md  conditional-assignment-sanitizer.md  deep-code-security.code-review.md  deep-code-security.feasibility.md  deep-code-security.md  deep-code-security.qa-report.md  deep-code-security.redteam.md  deep-code-security.review.md  fuzzer-container-backend.code-review.md  fuzzer-container-backend.feasibility.md  fuzzer-container-backend.md  fuzzer-container-backend.redteam.md  fuzzer-container-backend.review.md  merge-fuzzy-wuzzy.md  merge-fuzzy-wuzzy.redteam.md  output-formats.feasibility.md  output-formats.md  output-formats.redteam.md  output-formats.review.md  sast-to-fuzz-pipeline.feasibility.md  sast-to-fuzz-pipeline.md  sast-to-fuzz-pipeline.redteam.md  sast-to-fuzz-pipeline.review.md  scanner-tui.code-review.md  scanner-tui.feasibility.md  scanner-tui.md  scanner-tui.qa-report.md  (+11 more)
plans/archive/c-fuzzer-plugin/: c-fuzzer-plugin.code-review.md  c-fuzzer-plugin.feasibility.md  c-fuzzer-plugin.qa-report.md
plans/archive/c-language-support/: c-language-support.code-review.md  c-language-support.qa-report.md
plans/archive/conditional-assignment-sanitizer/: conditional-assignment-sanitizer.code-review.md  conditional-assignment-sanitizer.feasibility.md  conditional-assignment-sanitizer.qa-report.md  conditional-assignment-sanitizer.redteam.md  conditional-assignment-sanitizer.review.md
plans/archive/fuzzer-container-backend/: fuzzer-container-backend.code-review.md  fuzzer-container-backend.qa-report.md
plans/archive/merge-fuzzy-wuzzy/: merge-fuzzy-wuzzy.code-review.md  merge-fuzzy-wuzzy.feasibility.md  merge-fuzzy-wuzzy.qa-report.md  merge-fuzzy-wuzzy.review.md
plans/archive/output-formats/: output-formats.code-review.md  output-formats.qa-report.md
plans/archive/sast-to-fuzz-pipeline/: sast-to-fuzz-pipeline.code-review.md  sast-to-fuzz-pipeline.qa-report.md
plans/archive/scanner-tui/: scanner-tui.code-review.md  scanner-tui.qa-report.md
plans/archive/semgrep-scanner-backend/: semgrep-scanner-backend.code-review.md  semgrep-scanner-backend.qa-report.md
plans/archive/suppressions-file/: suppressions-file.code-review.md  suppressions-file.qa-report.md
plans/archive/sync/: sync-2026-03-13T09-45-00.review.md  sync-2026-03-15T09-56-29.review.md  sync-2026-03-16T00-39-38.review.md  sync-2026-03-17T11-45-00.review.md  sync-2026-03-18T20-41-21.review.md  sync-2026-03-19T01-45-12.review.md  sync-2026-03-19T13-14-00.review.md  sync-2026-03-19T21-32-54.review.md  sync-2026-03-20T14-30-00.review.md
registries/: README.md  c.yaml  go.yaml  python.yaml
registries/semgrep/c/: cwe-119-memory-corruption.yaml  cwe-120-buffer-overflow.yaml  cwe-134-format-string.yaml  cwe-190-integer-overflow.yaml  cwe-22-path-traversal.yaml  cwe-676-dangerous-function.yaml  cwe-78-command-injection.yaml
registries/semgrep/go/: cwe-22-path-traversal.yaml  cwe-78-command-injection.yaml  cwe-89-sql-injection.yaml
registries/semgrep/python/: cwe-22-path-traversal.yaml  cwe-78-command-injection.yaml  cwe-89-sql-injection.yaml  cwe-94-code-execution.yaml
sandbox/: Containerfile.fuzz-c  Containerfile.fuzz-python  Dockerfile.c  Dockerfile.go  Dockerfile.python  entrypoint.sh  seccomp-default.json  seccomp-fuzz-c.json  seccomp-fuzz-python.json
src/deep_code_security/: __init__.py  cli.py
src/deep_code_security/architect/: __init__.py  dependency_analyzer.py  guidance_generator.py  impact_analyzer.py  models.py  orchestrator.py
src/deep_code_security/auditor/: __init__.py  confidence.py  models.py  noop.py  orchestrator.py  protocols.py  (+3 more)
tests/: __init__.py  conftest.py
tests/test_architect/: __init__.py  test_dependency_analyzer.py  test_guidance_generator.py  test_orchestrator.py
tests/test_auditor/: __init__.py  test_confidence.py  test_orchestrator.py  test_sandbox.py  test_sandbox_extra.py  test_verifier.py
tests/test_bridge/: __init__.py  conftest.py  test_c_resolver.py  test_correlation.py  test_cwe_guidance.py  test_models.py  test_orchestrator.py  test_resolver.py
tests/test_fuzzer/: conftest.py  test_c_harness_validation_adversarial.py  test_cli.py  test_config.py  test_consent.py  test_engine_sast.py  test_models.py  test_orchestrator.py  test_prompts_sast.py
tests/test_hunter/: __init__.py  test_c_registry.py  test_cross_backend_compat.py  test_orchestrator.py  test_parser.py  test_parser_extra.py  test_registry.py  test_scanner_backend.py  test_semgrep_backend.py  test_semgrep_rules.py  test_source_sink_finder.py  test_source_sink_finder_extra.py  test_source_sink_query_paths.py  test_taint_c_paths.py  test_taint_go_paths.py  test_taint_tracker.py  test_taint_tracker_extra.py  test_treesitter_backend.py
tests/test_integration/: test_c_fuzz_container.py  test_end_to_end.py  test_false_positives.py  test_fuzz_container.py  test_input_sanitization.py  test_mcp_integration.py  test_path_validation.py
tests/test_mcp/: test_fuzz_tool.py  test_fuzz_tools.py  test_hunt_fuzz.py  test_input_validator.py  test_path_validator_extra.py  test_server.py  test_server_extra.py  test_server_verify_remediate.py
tests/test_shared/: test_file_discovery.py  test_file_discovery_extra.py  test_json_output.py  test_suppressions.py
tests/test_tui/: __init__.py  conftest.py  test_app.py  test_models.py  test_runner.py  test_runner_patterns.py  test_storage.py
(+153 files in other folders)
